Fixed Bootstrap table sizing. Adjusted the spacing and styling for the timestamps and MAC addresses.

--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,8 @@ input:-webkit-autofill {
 
 #pastDevs {
   border: 1px solid black;
-  width: 260px;
+  width: 300px;
   height: 150px;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
 }
